--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-dash
-dash-bootstrap-components
-pandas
-plotly
-numpy
+dash==2.11.1
+dash-bootstrap-components==1.4.1
+pandas==2.0.3
+plotly==5.15.0
+numpy==1.24.3
