--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 dash==2.11.1
 dash-bootstrap-components==1.4.1
+dash[diskcache]==2.11.1
 pandas==2.0.3
 plotly==5.15.0
 numpy==1.24.3
+diskcache==5.6.3
