Afinar detalles panel de monitoreo

--- a/.gitignore
+++ b/.gitignore
@@ -33253,3 +33253,5 @@ cache/cache.db
 .venv/Scripts/undill
 cache/cache.db-shm
 cache/cache.db-wal
+utils/__pycache__/__init__.cpython-311.pyc
+utils/__pycache__/parallel_utils.cpython-311.pyc
