Ajuste del monitoreo.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     # Construye la imagen usando el Dockerfile en el directorio actual
     build: .
     # Le da un nombre amigable al contenedor
+    image: zen-lotto-app:v1.0
     container_name: zen-lotto
     # Mapea el puerto 8050 del contenedor al puerto 8050 de tu máquina
     ports:
@@ -14,3 +15,6 @@ services:
       - ./data:/app/data
     # Reinicia el contenedor si se cae, a menos que lo detengamos manualmente
     restart: unless-stopped
+
+    environment:
+      - DOCKER_ENV=1
